Fix Netlify peer dependency issue

--- a/src/netlify.toml
+++ b/src/netlify.toml
@@ -1,7 +1,7 @@
-  [build]
-  publish = "dist" # Ensure this points to your build folder
-  command = "npm run build" # Adjust this if your build command is different
- 
+[build]
+  publish = "dist" # or "build" if you use CRA
+  command = "npm install --legacy-peer-deps && npm run build"
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
