--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "11_ecommerce_web",
+  "name": "portfolio",
+  "homepage": "https://zakaria-bouguezzar.github.io/portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,13 +8,14 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@react-three/drei": "^9.56.4",
-    "@react-three/fiber": "^8.15.14",
+    "@react-three/fiber": "^8.2.2",
     "@tailwindcss/vite": "^4.0.14",
-    "11_ecommerce_web": "file:",
     "aos": "^2.3.4",
     "framer-motion": "^12.23.12",
     "framer-motion-3d": "^12.4.13",
@@ -39,6 +41,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.17",
     "vite": "^5.0.8"
