--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "portfolio",
-  "homepage": "https://zakaria-bouguezzar.github.io/portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,9 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
+
   },
   "dependencies": {
     "@react-three/drei": "^9.56.4",
